Various re-factoring and simplifications; take 2 on the fix to populationControl()
git-svn-id: svn://bar.ebi.ac.uk/branches/atlas-standalone@14748 2913f559-6b04-0410-9a09-c530ee9f5186